--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                     <a href="https://haxulab.github.io/CopilotAdventures/">访问链接</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://raw.githubusercontent.com/microsoft/generative-ai-for-beginners/refs/heads/main/images/repo-thumbnailv4-fixed.png" alt="Generative AI for Beginners">
+                <div>
+                    <h3>Generative AI for Beginners</h3>
+                    <p>生成式人工智能入门教程。</p>
+                    <a href="https://itdtech.github.io/genaibeginner/">访问链接</a>
+                </div>
+            </div>
             <!-- 可以在这里添加更多项目 -->
         </section>
     </main>
