--- a/index.html
+++ b/index.html
@@ -17,34 +17,36 @@
         </section>
         <section>
             <h2>项目列表</h2>
+            <h3>GitHub Copilot</h3>
             <div class="card">
                 <img src="https://raw.githubusercontent.com/haxulab/Mastering-GitHub-Copilot-for-Paired-Programming/refs/heads/main/images/GitHub%20101%20-%20Curriculum%20v2.png" alt="Mastering GitHub Copilot for Paired Programming">
                 <div>
-                    <h3>Mastering GitHub Copilot for Paired Programming</h3>
+                    <h4>Mastering GitHub Copilot for Paired Programming</h4>
                     <p>学习如何使用GitHub Copilot进行配对编程。</p>
                     <a href="https://haxulab.github.io/Mastering-GitHub-Copilot-for-Paired-Programming/README_chs/">访问链接</a>
                 </div>
             </div>
             <div class="card">
+                <img src="https://raw.githubusercontent.com/haxulab/CopilotAdventures/refs/heads/main/Images/copilot-adventures.png" alt="Copilot Adventures">
+                <div>
+                    <h4>Copilot Adventures</h4>
+                    <p>探索GitHub Copilot的冒险之旅。</p>
+                    <a href="https://haxulab.github.io/CopilotAdventures/">访问链接</a>
+                </div>
+            </div>
+            <h3>人工智能</h3>
+            <div class="card">
                 <img src="https://raw.githubusercontent.com/haxulab/AI-For-Beginners/refs/heads/main/docs/lessons/sketchnotes/ai-overview.png" alt="AI For Beginners">
                 <div>
-                    <h3>AI For Beginners</h3>
+                    <h4>AI For Beginners</h4>
                     <p>人工智能入门教程。</p>
                     <a href="https://haxulab.github.io/AI-For-Beginners/">访问链接</a>
                 </div>
             </div>
             <div class="card">
-                <img src="https://raw.githubusercontent.com/haxulab/CopilotAdventures/refs/heads/main/Images/copilot-adventures.png" alt="Copilot Adventures">
-                <div>
-                    <h3>Copilot Adventures</h3>
-                    <p>探索GitHub Copilot的冒险之旅。</p>
-                    <a href="https://haxulab.github.io/CopilotAdventures/">访问链接</a>
-                </div>
-            </div>
-            <div class="card">
                 <img src="https://raw.githubusercontent.com/microsoft/generative-ai-for-beginners/refs/heads/main/images/repo-thumbnailv4-fixed.png" alt="Generative AI for Beginners">
                 <div>
-                    <h3>Generative AI for Beginners</h3>
+                    <h4>Generative AI for Beginners</h4>
                     <p>生成式人工智能入门教程。</p>
                     <a href="https://itdtech.github.io/genaibeginner/">访问链接</a>
                 </div>
